<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/settings_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/colored_circle"
                android:insetLeft="-20dp"
                android:insetTop="-30dp"
                android:insetRight="-20dp"
                android:insetBottom="-20dp"
                android:text="-"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_font_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settings_text_size" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/colored_circle"
                android:insetLeft="-20dp"
                android:insetTop="-30dp"
                android:insetRight="-20dp"
                android:insetBottom="-20dp"
                android:text="+"
                android:textAlignment="center"
                android:textSize="40sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checkedButton="@id/rb2">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_transparent_background"
                app:useMaterialThemeColors="true" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_translucent_background" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_opaque_background" />

        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_use_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings_show_contact_photos" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_events_count"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/settings_number_events"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:text="@string/settings_close" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


